# FOD_other

./: README.md  docker-compose.yml
ai/: Dockerfile  app.py  requirements.txt
backend/: Cargo.toml
backend/src/: main.rs  webrtc_signaling.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/input/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/components/: DashboardPage.tsx  InputControlPage.tsx  MonitoringPage.tsx
frontend/src/components/ui/: calendar.tsx  chart.tsx
frontend/src/context/: input-context.tsx
frontend/src/lib/: mockData.ts  mockDetections.ts
